@@ -15,9 +15,15 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-parallel-collections_${scala.binary.version}</artifactId>
+      <version>1.0.4</version>
+    </dependency>
+    <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
-      <version>4.1.68.Final</version>
+      <version>4.1.118.Final</version>
+      <scope>provided</scope>
     </dependency>
     <!--https://issues.apache.org/jira/browse/SPARK-22128-->
     <dependency>
@@ -43,14 +49,9 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.locationtech.sfcurve</groupId>
-      <artifactId>sfcurve-api_${scala.binary.version}</artifactId>
-      <version>0.2.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.locationtech.sfcurve</groupId>
-      <artifactId>sfcurve-zorder_${scala.binary.version}</artifactId>
-      <version>0.2.2</version>
+      <groupId>com.google.uzaygezen</groupId>
+      <artifactId>uzaygezen-core</artifactId>
+      <version>0.2</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -118,6 +119,26 @@
             <include>**/*Spec.*</include>
             <include>**/*Specs.*</include>
           </includes>
+          <argLine>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --add-modules=jdk.incubator.vector
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+            --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+            --add-opens=java.base/sun.security.action=ALL-UNNAMED
+            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+            -Djdk.reflect.useDirectMethodHandle=false
+            -Dio.netty.tryReflectionSetAccessible=true
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
